[gd_scene load_steps=12 format=3 uid="uid://bb0qjohsmtkim"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_3wdey"]
[ext_resource type="FontFile" uid="uid://dhbgcfs8kn0qo" path="res://assets/font/connection_ii/ConnectionII.otf" id="2_lv6f1"]
[ext_resource type="PackedScene" uid="uid://b306eeheepv61" path="res://scenes/menu_button.tscn" id="3_xqvkq"]
[ext_resource type="PackedScene" uid="uid://h8jotjubaykd" path="res://scenes/InGameOptions.tscn" id="4_gqjv2"]

[sub_resource type="FontVariation" id="FontVariation_b0v1u"]
base_font = ExtResource("2_lv6f1")

[sub_resource type="FontVariation" id="FontVariation_k7xcu"]
resource_local_to_scene = true
base_font = ExtResource("2_lv6f1")
variation_transform = Transform2D(1, 0, 0, 1, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_qgaro"]
resource_local_to_scene = true
base_font = ExtResource("2_lv6f1")
variation_transform = Transform2D(1, 0, 0, 1, 0, 1)

[sub_resource type="Animation" id="Animation_hr7ts"]
resource_name = "OptionsIn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 648)]
}

[sub_resource type="Animation" id="Animation_y7q3c"]
resource_name = "OptionsOut"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 648), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_xc70a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y3ymy"]
_data = {
"OptionsIn": SubResource("Animation_hr7ts"),
"OptionsOut": SubResource("Animation_y7q3c"),
"RESET": SubResource("Animation_xc70a")
}

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3wdey")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.45098)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 408.0
offset_top = 64.0
offset_right = 744.0
offset_bottom = 157.0
theme_override_fonts/font = SubResource("FontVariation_b0v1u")
theme_override_font_sizes/font_size = 89
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsButton" parent="." instance=ExtResource("3_xqvkq")]
offset_left = 320.0
offset_top = 256.0
offset_right = 832.0
offset_bottom = 320.0
menu = "NONE"
action = "emit"

[node name="Label" parent="OptionsButton" index="0"]
theme_override_fonts/font = SubResource("FontVariation_k7xcu")
text = "Options"

[node name="MainMenuButton" parent="." instance=ExtResource("3_xqvkq")]
offset_left = 320.0
offset_top = 384.0
offset_right = 832.0
offset_bottom = 448.0
menu = "NONE"
action = "emit"

[node name="Label" parent="MainMenuButton" index="0"]
theme_override_fonts/font = SubResource("FontVariation_qgaro")
text = "Main Menu"

[node name="ResumeButton" parent="." instance=ExtResource("3_xqvkq")]
offset_left = 320.0
offset_top = 512.0
offset_right = 832.0
offset_bottom = 576.0
menu = "NONE"
action = "emit"

[node name="Label" parent="ResumeButton" index="0"]
theme_override_fonts/font = SubResource("FontVariation_qgaro")
text = "Resume"

[node name="InGameOptions" parent="." instance=ExtResource("4_gqjv2")]
layout_mode = 1
offset_top = -648.0
offset_bottom = -648.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y3ymy")
}

[connection signal="pushed" from="OptionsButton" to="." method="_on_options_button_pushed"]
[connection signal="pushed" from="MainMenuButton" to="." method="_on_main_menu_button_pushed"]
[connection signal="pushed" from="ResumeButton" to="." method="_on_resume_button_pushed"]
[connection signal="back" from="InGameOptions" to="." method="_on_in_game_options_back"]

[editable path="OptionsButton"]
[editable path="MainMenuButton"]
[editable path="ResumeButton"]
